[package]
name = "chonk"
version = "0.1.0"
authors = ["chux0519 <chuxdesign@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.4.0"
imgui-glium-renderer = "0.4.0"
imgui-winit-support = "0.4.0"
glium = { version = "0.27", default-features = true }
clipboard = "0.5"
